inroom页面对接接口

--- a/js/pages/checkin/illumination.html
+++ b/js/pages/checkin/illumination.html
@@ -174,7 +174,7 @@
             <div class="content-unit" ms-on-tap="openLinyu">
                 <img ms-if="isShow4==0" src="../img/icon/icon-linyu.svg" class="">
                 <img ms-if="isShow4==1" src="../img/icon/icon-linyu-select.svg" class="">
-                <div class="">淋雨灯</div>
+                <div class="">淋浴灯</div>
             </div>
             <div class="content-unit" ms-on-tap="openMatong">
                 <img ms-if="isShow5==0" src="../img/icon/icon-matongdeng.svg" class="">
