--- a/js/pages/service/orderList.html
+++ b/js/pages/service/orderList.html
@@ -50,7 +50,7 @@
                 <div class="content-infor" ms-repeat="data">
                     <div class="bs-text-x-large">{{el.roomNo}}</div>
                     <div class="bs-text-large">{{el.userName}}</div>
-                    <div class="sendBtn" ms-on-tap="send(el.CustomerStatus)">
+                    <div class="sendBtn" ms-on-tap="send(el.customerStatus)">
                         {{el.customerStatus==1?'去做准备':sendBtnText}}
                     </div>
                 </div>
