room 页修改html及样式，去掉pullfresh；clock touch事件改添加方法

--- a/js/pages/cms/favoreeList.html
+++ b/js/pages/cms/favoreeList.html
@@ -17,7 +17,7 @@
                     </div>
                 </div>
                 <div>
-                    <img src="../img/icon/edit_red.png" alt="" style="width: 12px;position: relative;top: -10px;">
+                    <img src="../img/icon/edit.png" alt="" style="width: 12px;position: relative;top: -10px;">
                 </div>
             </div>
         </div>
