--- a/js/pages/user/user-info.html
+++ b/js/pages/user/user-info.html
@@ -267,7 +267,7 @@ div ul li {
             </div>
         </a>
     </div>
-    <div class="content bs-bg-white" style="margin: 12px 0;">
+    <!-- <div class="content bs-bg-white" style="margin: 12px 0;">
         <a href="../promotion-detail.html">
             <div>
                 推广奖励
@@ -286,7 +286,7 @@ div ul li {
                 <img src="../img/icon/right-arrow.svg" class="icon" alt="">
             </div>
         </a>
-    </div>
+    </div> -->
 </div>
 <div ms-controller="change">
     <div id="nick" class="mui-page" style="position: fixed;z-index: 999;">
