--- a/js/pages/user/more.html
+++ b/js/pages/user/more.html
@@ -31,6 +31,22 @@
             <img src="../img/icon/right-arrow.svg" class="icon" alt="">
         </div>
     </div>
+    <div ms-if="isVip>0" class="content bs-text-444 bs-text-normal" onclick="javascript:location.href='../promotion-detail.html';">
+        <div>
+            推广奖励
+        </div>
+        <div style="height: 15px;">
+            <img src="../img/icon/right-arrow.svg" class="icon" alt="">
+        </div>
+    </div>
+    <div ms-if="isVip>0" class="content bs-text-444 bs-text-normal" onclick="javascript:location.href='../vip-invite.html';">
+        <div>
+            邀请好友
+        </div>
+        <div style="height: 15px;">
+            <img src="../img/icon/right-arrow.svg" class="icon" alt="">
+        </div>
+    </div>
     <div class="content bs-text-444 bs-text-normal" onclick="javascript:location.href='../setting.html';">
         <div>
             设置
